Changes to fig2dev
===============================================================================
Version 3.2
===============================================================================
Patchlevel Xx (Xxx 20xx)

BUGS FIXED:
	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
	o Allow Fig v2 text strings ending with multiple ^A. Ticket #55.
	o Embed images in pdfs with their original compression type, i.e., leave
	  the gs switch "-dAutoFilterColorImages" at its default value "true".

-------------------------------------
Patchlevel 7b (Nov 2019)

NEW FEATURES:
	o A X color database is not needed, but can be provided. The location of
	  the database can be given at compile time, default /etc/X11/rgb.txt.

BUGS FIXED:
	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
	Debian bug numbers refer to https://bugs.debian.org/#.
	o Do not clip objects with line-thickness 0 having arrows. Ticket #53.
	o Do not segfault on circle/half circle arrowheads with a magnification
	  larger 42. Always draw circle arrowheads with 40 points. Ticket #52.
	o Allow circles or ellipses with negative radii. Ticket #49.
	o Avoid "dimension too large error" with tikz output by avoiding
	  coordinate values smaller than -16383.
	o Make tests (test1.c) work with -fsanitize=address compiler option.
	o Obey join-style of lines in tikz output.
	o Pass utf8-strings to svg output, escape some chars (<>&).
	o Accept inclined boxes and change them to polygons. Fixes ticket #43.
	o Make tests #27 and #33 work on Mac Darwin, failed due to whitespace
	  formatting differences. From Hanspeter Niederstrasser. Ticket #40.
	o Use only latex, neither etex or tex, to test tikz output. Usage of
	  etex, after hint from Roland Rosenfeld, closed debian bug 920368.
	o For tikz output, do not draw arrows on a single point line.
	o Omit spurious showpage when including jpg-file. From Rainer Buchty.
	o Correct a few memory leaks and corruptions. See commit d1c54f6.